# glstuff

./: CMakeLists.txt  README.md  ads.h  fragment.glsl  fragment3.glsl  fragment4.glsl  imgui_impl_glfw.cpp  main.cpp  ogl_shader.cpp  ogl_shader.h  parser.cpp  parser.h  raytrace.glsl  stb_image.h  structs.h  vertex.glsl
