cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)
#FIND_PACKAGE(GLFW3 REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLM REQUIRED)

INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(imgui imgui/examples/opengl3_example imgui/examples/libs/gl3w)
LINK_DIRECTORIES(${GLFW_LIBRARY_DIRS})

IF (APPLE)
  	SET(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
ENDIF ()

ADD_EXECUTABLE(glstuff
	main.cpp
	imgui/imgui.cpp
  	imgui/imgui_draw.cpp
  	imgui/examples/libs/gl3w/GL/gl3w.c
  	imgui/examples/opengl3_example/imgui_impl_glfw_gl3.cpp
)

IF (APPLE)
   FIND_LIBRARY(COCOA_LIBRARY Cocoa)
   FIND_LIBRARY(IOKIT_LIBRARY IOKit)
   TARGET_LINK_LIBRARIES(glstuff ${COCOA_LIBRARY} ${IOKIT_LIBRARY})
ENDIF ()

TARGET_LINK_LIBRARIES(glstuff ${OPENGL_LIBRARY} ${GLFW_LIBRARIES} ${GLEW_LIBRARIES})
